# IdeaSearch-framework

./: .gitignore  README-zh.md  README.md  coverage_report_compiler.txt  default_compiler.profdata  pyproject.toml
meta/: generate.py
miscellaneous/: README_backup_250506.md  README_backup_250527.md  evaluator_PDF.py  old_interface.py
miscellaneous/0415Backup/: main.py  modules.py
miscellaneous/0502LocalModelCode/: local_model.py  local_model2.py  local_model_czy.py  test.py
miscellaneous/old_scripts/: my_script_Combinatorics.py  my_script_CompilerAutoTuning.py  my_script_PDF.py  my_script_SysYCompilerTest.py  my_script_TemplateProgram.py
programs/FeynmanIntegralReduction/: evaluator.py
programs/FeynmanIntegralReduction/evaluator/: evaluator.py
programs/SysYCompilerTest/database/: score_sheet.json
programs/SysYCompilerTest/evaluator/: evaluator.py
programs/TemplateProgram/: prompt.py  run.py
programs/TemplateProgram/database/: initial_idea.idea
programs/TemplateProgram/database/data/: database_assessment.npz  database_assessment_example.npz  island_assessment.npz  model_scores.npz  model_scores_example.npz
programs/TemplateProgram/database/ideas/: .gitignore  initial_idea12.idea  score_sheet.json
programs/TemplateProgram/evaluator/: evaluator.py
programs/TemplateProgram/user_code/: assessment.py  evaluation.py  prompt.py
src/: .gitignore  README.md  diary.txt  main.py  my_script_template.py  utils.py
src/API4LLMs/: README.md  api_keys_example.json  get_answer.py  local_model.py  local_models_template.json  model_manager.py
src/FunSearch/: database.py  evaluator.py  interface.py  main.py  sampler.py
src/IdeaSearch/: database.py  evaluator.py  ideasearcher.py  interface.py  island.py  meta.py  old_interface.py  sampler.py  utils.py
src/IdeaSearch/locales/: ideasearch.pot
src/IdeaSearch/utils/functional/: __init__.py
src/Tools/Ansatz/: ansatz.py  ansatz_testcases.py  test_ansatz.py
src/Tools/FunctionOperators/: function_operators.py  test.py
src/Tools/Math/: data_fitting.py  integral.py  math.py
src/Tools/My_OS/: my_os.py
src/Tools/ScriptExecutor/: script_executor.py
src/Tools/TaskRunner/: task_runner.py
src/scripts/: my_script_TemplateProgram.py  new_framework_script.py
(+13 files in other folders)
